macros/tests/compile_fail/invalid_attribute.stderr
error: expected 'name' attribute
 --> tests/compile_fail/invalid_attribute.rs:5:16
  |
5 | #[melbi_fn_new(invalid_key = "value")]
  |                ^^^^^^^^^^^
